--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-# OS generated files #
-######################
+# https://github.com/jodytate/gitignore/blob/master/Global/OSX.gitignore
+
 .DS_Store
-.DS_Store?
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
 ._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Sublime Text 2 
+
+sftp-config.json
