move off php for now and some etc. below
works with non-test getuser request on rtdev; other tweaks for the tsm
form running

--- a/.htaccess
+++ b/.htaccess
@@ -542,5 +542,5 @@ AddCharset utf-8 .atom .css .js .json .rss .vtt .xml
   php_value session.cookie_httponly true
 </IfModule>
 
-RewriteRule ^form/([a-zA-Z0-9]+)/$ form.html?form=$1
+#RewriteRule ^form/([a-zA-Z0-9]+)/$ form.html?form=$1
 
